fix avatar cropping bug

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -95,10 +95,26 @@ pre.debug_dump {
 
 #loggedin_dropdown {
   padding: 9px 15px;
+  height: 50px;
 }
 
 .file-input .file-preview .close {
   color: red;
   text-shadow: none;
   opacity: 1;
+}
+
+#panel-avatar {
+  margin: 0 5px 0 0;
+  width: 32px;
+  height: 32px;
+  background-image: url(avatar.png);
+  overflow: hidden;
+  float:left;
+}
+
+#panel-login {
+  float: left;
+  height: 32px;
+  padding-top: 5px;
 }
